- 
    Bug 
- 
    Resolution: Done
- 
    P2: Important 
- 
    5.12.3
- 
    Mac
- 
        
- 
        da67565737b564e1951b15c6b7756783c88ab438 (qt/qtwebengine/5.12.4)
Attached Simple application based on WebEngineView doesn't capture desktop screen correctly. Only first frame is captured.
This has been also rerported here:
https://bugs.chromium.org/p/webrtc/issues/detail?id=7960 
This works good with Qt5.11.3
| For Gerrit Dashboard: QTBUG-76045 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 263069,2 | Use MessagePumpMac for desktop capture thread on macOS | 69-based | qt/qtwebengine-chromium | Status: MERGED | +2 | 0 | 
| 263331,3 | Update Chromium | 5.12.4 | qt/qtwebengine | Status: MERGED | +2 | 0 |