Use MessagePumpMac for desktop capture thread on macOS

Task-number: QTBUG-76045
Change-Id: Ibd3a8cbf89e9cdff9f15efe1fc9f503d46c2d358
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>